Bug 203734 - enable focus ring on push buttons in 10.4 (Tiger) and above. r=jhpedemonte sr=smfr a=asa