widget/src/mac/nsNativeThemeMac.cpp
@@ -171,11 +171,11 @@ nsNativeThemeMac::DrawButton ( ThemeButtonKind inKind, const Rect& inBoxRect, PR
   info.value = inValue;
   info.adornment = inAdornment;
   if ( inState & NS_EVENT_STATE_FOCUS ) {
-    // There is a bug in OS 10.2 and higher where if we are in a CG context and
+    // There is a bug in OS 10.2.x-10.3.x where if we are in a CG context and
     // draw the focus ring with DrawThemeButton(), there are ugly lines all
     // through the button.  This may get fixed in a dot-release, but until it
     // does, we can't draw the focus ring.
-    if (inKind != kThemePushButton || !nsRenderingContextMac::OnJaguar())
+    if (inKind != kThemePushButton || nsRenderingContextMac::OnTigerOrLater())
       info.adornment = kThemeAdornmentFocus;
   }
   if ( inIsDefault )
